SM-Dev/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Marketing_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Marketing Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_STD_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer-STD-Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_STD_Monthly_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer-STD-Monthly Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_STD_Order_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer-STD- Order Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_STD_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer-STD-Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>At the event, email address value changes, this will mark the checkbox.</inlineHelpText>
        <label>Email Address Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadconversionRT__c</fullName>
        <label>LeadconversionRT</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <formula>Account.ENSX_EDM__SAP_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Salesforce Marketing Cloud Subscription field for Invoice</inlineHelpText>
        <label>SFMC Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFMC_Marketing_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Salesforce Marketing Cloud Subscription field for Marketing Messages</inlineHelpText>
        <label>SFMC Marketing Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFMC_Monthly_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Salesforce Marketing Cloud Subscription field for Monthly Statements</inlineHelpText>
        <label>SFMC Monthly Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFMC_Order_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Salesforce Marketing Cloud Subscription field for Order Confirmation</inlineHelpText>
        <label>SFMC Order Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFMC_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Salesforce Marketing Cloud Subscription field for Shipping</inlineHelpText>
        <label>SFMC Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Contact_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Contacts that were presented to the user at the time they created it.</description>
        <label>Contact Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Lead_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Leads that were presented to the user at the time they created it.</description>
        <label>Lead Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YETI_Cntct_to_Acct_Ownership_Check__c</fullName>
        <formula>OwnerId = Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YETI-Cntct to Acct Ownership Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Contacts_My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Primary_Contact__c</columns>
        <columns>SFMC_Order_Confirmation__c</columns>
        <columns>SFMC_Shipping__c</columns>
        <columns>SFMC_Invoice__c</columns>
        <columns>SFMC_Marketing_Messages__c</columns>
        <columns>SFMC_Monthly_Statement__c</columns>
        <filterScope>Mine</filterScope>
        <label>Contacts- My Contacts</label>
        <sharedTo>
            <group>Field_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Canada_Contact</fullName>
        <active>true</active>
        <label>Canada Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>ERP_Contact</fullName>
        <active>true</active>
        <label>ERP Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Contact</fullName>
        <active>true</active>
        <description>All new contacts</description>
        <label>New Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>